--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <input type="text" placeholder="Username" />
                 <input type="password" placeholder="Password" />
                 <input type="password" placeholder="Confirm Password" />
-                <span>By clicking Sign Up, you agree to our <a style="font-size:12px;font-weight: 800;"
+                <span>By clicking Sign up, you agree to our <a style="font-size:12px;font-weight: 800;"
                         href="#">Terms</a> and <a style="font-size:12px;font-weight: 800;" href="#">Data
                         Policy</a>.</span>
                 <button>Sign Up</button>
