Edited : general file structures and functions

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
 
     <script src="./src/DataController.js"></script>
-    <script src="./src/UIController.js"></script>
+    <!-- <script src="./src/UIController.js"></script> -->
     <script src="./src/AppController.js"></script>
     <script src="https://kit.fontawesome.com/8ebb2767f2.js" crossorigin="anonymous"></script>
 </body>
